--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -66,7 +66,6 @@
 ////////////////////////////////////////
 // USER NAVIGATION
 .user-nav {
-  background-color: greenyellow;
   align-self: stretch;
 
   display: flex;
@@ -85,21 +84,36 @@
   }
 
   &__icon-box {
-
+    position: relative;
   }
 
   &__icon {
     height: 2.25rem;
     width: 2.25rem;
+    fill: var(--color-grey-dark-2);
   }
 
   &__notification {
+    font-size: 0.8rem;
+    font-weight: 700;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 50%;
+    background-color: var(--color-primary);
+    color: #fff;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.1rem;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__user-photo {
     height: 3.75rem;
     border-radius: 50%;
+    margin-right: 1rem;
   }
 
 }
