--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -29,11 +29,15 @@
 
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
   background-color: #fff;
+
+  // Testing
   background-color: orangered;
+  height: 80rem;
 
   flex: 1; // flex grow
 }
