--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -187,7 +187,7 @@
     display: flex;
     align-items: center;
 
-    @media only screen and (max-width: $bp-medium){
+    @media only screen and (max-width: $bp-medium) {
       justify-content: center;
       padding: 2rem;
     }
@@ -403,15 +403,18 @@
     margin-right: .7rem;
 
     // Older browsers
-    //background-image: url(../img/chevron-thin-right.svg);
-    //background-size: cover;
+    background-image: url(../img/chevron-thin-right.svg);
+    background-size: cover;
 
     // Newer browsers - masks
-    background-color: var(--color-primary);
-    -webkit-mask-image: url(../img/chevron-thin-right.svg);
-    -webkit-mask-size: cover;
-    mask-image: url(../img/chevron-thin-right.svg);
-    mask-size: cover;
+    @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+      background-color: var(--color-primary);
+      -webkit-mask-image: url(../img/chevron-thin-right.svg);
+      -webkit-mask-size: cover;
+      mask-image: url(../img/chevron-thin-right.svg);
+      mask-size: cover;
+      background-image: none;
+    }
   }
 }
 
